--- a/faq.html
+++ b/faq.html
@@ -112,6 +112,10 @@
 
 		<section class="faq faq-block">
 			<div class="content-width">
+				<ul class="breadcrumb">
+					<li><a href="index.html"><img src="img/icon-15.svg" alt="">Головна  </a><span><img src="img/icon-14.svg" alt=""></span> </li>
+					<li>Батьківськи ЧаПи</li>
+				</ul>
 				<h1><b>Батьківськи ЧаПи
 
 					<span class="tooltip">
@@ -126,7 +130,7 @@
 					<div class="item">
 						<label class="form-label" for="select-11"></label>
 						<select id="select-11">
-							<option value="0" data-display="Язык" selected hidden>Оберіть категорію</option>
+							<option value="0" selected disabled>Оберіть категорію</option>
 							<option value="1">Всі</option>
 							<option value="2">Категорія 1</option>
 							<option value="3">Категорія 2</option>
@@ -137,7 +141,7 @@
 					<div class="item">
 						<label class="form-label" for="select-12"></label>
 						<select id="select-12">
-							<option value="0" data-display="Язык" selected hidden>Оберіть тему</option>
+							<option value="0" selected disabled>Оберіть тему</option>
 							<option value="1">Всі</option>
 							<option value="2">Категорія 1</option>
 							<option value="3">Категорія 2</option>
@@ -177,7 +181,7 @@
 				</div>
 
 				<div class="bottom">
-					<a href="#add-testimonials" class=""><span><img src="img/icon-16.svg" alt=""></span> Показати ще</a>
+					<a href="#" class=""><span><img src="img/icon-16.svg" alt=""></span> Показати ще</a>
 				</div>
 			</div>
 		</section>
@@ -189,6 +193,11 @@
 						<img src="img/bg-11-1.svg" alt="" class="img-1">
 						<img src="img/bg-11-2.svg" alt="" class="img-2">
 						<img src="img/bg-11-3.svg" alt="" class="img-3">
+					</div>
+					<div class="bg bg-mob">
+						<img src="img/bg-12-1.svg" alt="" class="img-1">
+						<img src="img/bg-12-2.svg" alt="" class="img-2">
+						<img src="img/bg-12-3.svg" alt="" class="img-3">
 					</div>
 					<div class="wrap">
 						<div class="text">
