--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
 			<div class="content-width">
 				<div class="logo-wrap">
 					<a href="index.html">
-						<img src="img/logo.svg" alt="">
+						<img src="img/logo-white.svg" alt="">
 					</a>
 				</div>
 				
@@ -44,7 +44,7 @@
 						<li><a href="#">Навчання просто неба</a></li>
 						<li><a href="#">Блог</a></li>
 						<li><a href="#">Про нас</a></li>
-						<li><a href="#">Громадьська діяльність</a></li>
+						<li><a href="#">Громадська діяльність</a></li>
 						<li class="sub-menu-wrap">
 							<a href="#">Інше</a>
 							<ul class="sub-menu">
@@ -113,7 +113,7 @@
 		<section class="blog">
 			<div class="bg">
 				<img src="img/bg-13-1.svg" alt="" class="img-1">
-				<img src="img/bg-13-2.svg" alt="" class="img-2">
+				<img src="img/bg-13-2-1.svg" alt="" class="img-2">
 				<img src="img/bg-13-3.svg" alt="" class="img-3">
 			</div>
 			<div class="bg bg-mob">
@@ -440,11 +440,18 @@
 				</figure>
 
 				<p>Коли ви отримуєте доступ до до нашого вебсайту, ми автоматично збираємо з вашого пристрою файли cookie, IP-адресу, інформацію про вашу взаємодію з вебсайтом, наприклад, тип браузера, тип і модель пристрою, мову системи, обсяг пам’яті, версію ОС, час доступу та часовий пояс, тощо. Нам необхідні ці дані для надання наших послуг, а також аналізу, як користувачі використовують вебсайт.</p>
+				<figure class="alignleft">
+					<img src="img/img-9.jpg" alt="">
+				</figure>
 				<p>
 					Для покращення вебсайту та розміщення реклами ми використовуємо сторонні рішення. У результаті ми можемо обробляти дані за допомогою рішень, розроблених Ascend, Google, Wix. Тому деякі дані зберігаються та обробляються на серверах таких третіх сторін. Це дозволяє нам аналізувати різні взаємодії (як часто користувачі користуються вебсайтом, які сторінки переглядають наші користувачі).</p>
 				<p>
 					Ми можемо попросити вас надати свою електронну адресу, якщо ви хочете отримувати інформацію про оновлення в нашому блозі та новини про нашу компанію. Ми використовуватимемо ці дані, щоб надсилати вам електронні листи. Ви також можете надіслати повідомлення нашій редакції, для цього вас попросять вказати ваше ім'я.</p>
 				<p>
+
+					<figure class="alignright">
+						<img src="img/img-9.jpg" alt="">
+					</figure>
 					Прочитайте нашу Політику приватності нижче, щоб дізнатися більше про те, що ми робимо з даними (Розділ 3), які права доступні вам у зв’язку з обробкою ваших персональних даних (Розділ 6) і хто буде контролером даних (Розділ 1). Якщо будь-які запитання залишаться без відповіді, зв’яжіться з нами за адресою <a href="mailto:genesis.blog@gen.tech">genesis.blog@gen.tech</a>.
 				</p>
 				<p class="h3">Розділ 1</p>
