--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<li><a href="#">Навчання просто неба</a></li>
 						<li><a href="#">Блог</a></li>
 						<li><a href="#">Про нас</a></li>
-						<li><a href="#">Громадьська діяльність</a></li>
+						<li><a href="#">Громадська діяльність</a></li>
 						<li class="sub-menu-wrap">
 							<a href="#">Інше</a>
 							<ul class="sub-menu">
@@ -111,18 +111,34 @@
 	<main>
 
 		<section class="home-bonner">
+			<div class="bg">
+				<div class="swiper bg-slider">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<img src="img/bg-1.jpg" alt="">
+							<img src="img/bg-1-1.jpg" alt="" class="mob">
+
+						</div>
+						<div class="swiper-slide">
+							<img src="img/bg-1.jpg" alt="">
+							<img src="img/bg-1-1.jpg" alt="" class="mob">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-pagination bg-pagination"></div>
+			</div>
 			<div class="slider-wrap">
 				<div class="swiper home-top-slider">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide swiper-slide-1">
-							<div class="bg">
+							<!--<div class="bg">
 								<img src="img/bg-1.jpg" alt="">
-							</div>
+							</div>-->
 							<div class="content-width">
 								<div class="title-wrap">
 									<h1 class="title"  data-aos="fade-up" data-aos-delay="300">
-										<span>Друзі.</span>
-										<span>Пригоди.</span>
+										<span>Друзі</span>
+										<span>Пригоди</span>
 										<span>Природа</span>
 									</h1>
 								</div>
@@ -136,78 +152,14 @@
 								</div>
 							</div>
 						</div>
-						<div class="swiper-slide swiper-slide-2">
-							<div class="bg">
-								<img src="img/bg-1.jpg" alt="">
-							</div>
-							<div class="content-width">
-								<div class="title-wrap">
-									<h2 class="title" data-aos="fade-up" data-aos-delay="300">
-										<span>Друзі.</span>
-										<span>Пригоди.</span>
-										<span>Природа</span>
-									</h2>
-								</div>
-								<div class="text-wrap">
-									<div class="text" data-aos="fade-up" data-aos-delay="500">
-										<p>Пригоди на природі для дітей 4-16 років без батьків і гаджетів</p>
-									</div>
-									<div class="btn-wrap" data-aos="fade-up" data-aos-delay="300">
-										<a href="#">Докладніше</a>
-									</div>
-								</div>
-							</div>
-						</div>
 					</div>
-					<div class="swiper-pagination home-top-pagination"></div>
+					<!--<div class="swiper-pagination home-top-pagination"></div>-->
 				</div>
 			</div>
 		</section>
 
 		<section class="about">
-			<div class="btn-wrap">
-				<div class="form-wrap">
-					<div class="close-form">
-						<a href="#"><img src="img/icon-4.svg" alt=""></a>
-					</div>
-					<p class="h3">Залиште номер</p>
-					<p>І ми зв’яжемося з Вами протягом дня!</p>
-					<form action="#" class="form-default">
-						<div class="input-wrap">
-							<label for="name-about"></label>
-							<input type="text" name="name-about" id="name-about" placeholder="Ім’я">
-						</div>
-						<div class="input-wrap input-wrap-tel-about">
-							<label for="tel-about"></label>
-							<input type="text" name="tel-about" id="tel-about" placeholder="">
-						</div>
-						<div class="input-wrap">
-							<label for="message-about"></label>
-							<textarea name="message-about" id="message-about" placeholder="Питання"></textarea>
-						</div>
-						<div class="input-submit">
-							<button type="submit" class="btn-default">Зареєструватися</button>
-						</div>
-						<div class="input-wrap-check">
-							<input type="checkbox" id="check-1" name="check-1" >
-							<label for="check-1">Натискаючи кнопку “Надіслати” я даю згоду на обробку моїх даних</label>
-						</div>
 
-						<div class="send-block">
-							<div class="wrap-send">
-								<p class="h3">Дякуємо!</p>
-								<p class="big">Ваш запит надіслано. Ми зв’яжемося з Вами найближчим часом.</p>
-							</div>
-						</div>
-
-					</form>
-					<div class="bottom">
-						<p>Також Ви можете подзвонити самостійно:</p>
-						<p><a href="tel:+380689795757">+38 (068) 979 57 57</a></p>
-					</div>
-				</div>
-				<a href="#"><img src="img/icon-3.svg" alt=""></a>
-			</div>
 			<div class="bg bg-mob">
 				<img src="img/mob-bg-11-1.svg" alt="" class="bg-1">
 				<img src="img/mob-bg-11-2.svg" alt="" class="bg-2">
@@ -221,68 +173,89 @@
 			</div>
 			<div class="content-width">
 				<div class="content" data-aos="fade-up" data-aos-delay="300">
-					<div class="title">Goйra! - це босоноге дитинство без ґаджетів. </div>
-					<p>Діти взаємодіють зі світом довкола та одне з одним, вчаться давати собі раду з реальними викликами. Стають впевненішими, самостійнішими і, звісно ж, здоровішими.</p>
+					<div class="item">
+						<div class="title">Наша місія – розвиток дитини через взаємодію з природою. </div>
+						<p>Пригоди на природі розвивають смак до активного життя, здружують, викликають бажання досліджувати та творити, запускають фантазію та мрії на повну. А ще - обережно! - викликають залежність ;)</p>
 
-					<p>Пригоди на природі розвивають смак до активного життя, здружують, викликають бажання досліджувати та творити, запускають фантазію та мрії на повну.</p>
+						<p>Ми популяризуємо навчання просто неба в Україні та організовуємо пригодницькі табори, походи, сплави, спелео- та скелелазні виїзди, вільні лісові прогулянки та інші пригоди на природі.</p>
+					</div>
+					<div class="item">
+						<div class="title">Goйra! - це босоноге дитинство без ґаджетів. </div>
+						<p>Діти взаємодіють зі світом довкола та одне з одним, вчаться давати собі раду з реальними викликами. Стають впевненішими, самостійнішими і, звісно ж, здоровішими. </p>
+						<div class="btn">
+							<a href="#" class="btn-default">Підтримати</a>
+						</div>
+					</div>
 
-					<p>А ще - обережно! - викликають залежність ;)</p>
-					<p>Ми популяризуємо навчання просто неба в Україні та організовуємо пригодницькі табори, походи, сплави, спелео- та скелелазні виїзди, вільні лісові прогулянки та інші пригоди на природі.</p>
-					<p class="title">Наша місія – розвиток дитини через взаємодію з природою. </p>
-					<p class="empty"></p>
+
+
+
 				</div>
 			</div>
 		</section>
 
 		<section class="children-info">
+			<div class="bg">
+				<img src="img/after-1.svg" alt="" class="img-1">
+				<img src="img/after-3.svg" alt="" class="img-2">
+			</div>
 			<div class="content-width">
-				<div class="item item-1" data-aos="fade-up" data-aos-delay="300">
-					<div class="text">
-						<p>Кожна подія унікальна та незвичайна завдяки атмосфері, яку створюють діти, інструктори та природа навкруги.</p>
-						<p class="h2">Пригоди <span>на природі</span></p>
-						<p>Різноманіття пригод - від одноденних походів до багатоденних таборів та сплавів - допоможе знайти свій улюблений формат. Часто хочеться спробувати все!</p>
-						<div class="link-wrap">
-							<a href="#"><span class="icon"><img src="img/arrow.svg" alt=""></span>Докладніше</a>
-						</div>
-						<div class="icon-wrap">
-							<img src="img/after-2.svg" alt="">
-						</div>
-					</div>
-					<figure>
-						<p class="h2">Пригоди <span>на природі</span></p>
-						<a href="#">
-							<img src="img/img-1.jpg" alt="">
-						</a>
-						<div class="icon-wrap">
-							<img src="img/after-1.svg" alt="">
-						</div>
-					</figure>
-				</div>
-				<div class="item item-2 item-revers" data-aos="fade-up" data-aos-delay="300">
-					<div class="text">
-						<p>Навчання - це зовсім не про ручку і зошит. Щоб пізнавати світ довкола, треба вийти із класу. Згодні? Тоді вам сюди.
-						</p>
-						<p class="h2">Навчання <span>просто неба</span></p>
-						<p>Лісові дні дуже впливають на динаміку в класі. Ефективне навчання починається тоді, коли група стає одним цілим.</p>
-						<div class="link-wrap">
-							<a href="#"><span class="icon"><img src="img/arrow.svg" alt=""></span>Докладніше</a>
-						</div>
-					</div>
+				<div class="content">
+					<div class="item item-1" data-aos="fade-up" data-aos-delay="300">
+						<div class="text">
 
-					<figure>
-						<p class="h2">Навчання <span>просто неба</span></p>
-						<a href="#">
-							<img src="img/img-2.jpg" alt="">
-						</a>
-						<div class="icon-wrap">
-							<img src="img/after-3.svg" alt="">
+							<p class="h2">Пригоди <span>на природі</span></p>
+							<p>Кожна подія унікальна та незвичайна завдяки атмосфері, яку створюють діти, інструктори та природа навкруги.
+							</p>
+							<p>Різноманіття пригод - від одноденних походів до багатоденних таборів та сплавів - допоможе знайти свій улюблений формат. Часто хочеться спробувати все!</p>
+							<div class="link-wrap">
+								<a href="#"><span class="icon"><img src="img/arrow.svg" alt=""></span>Докладніше</a>
+							</div>
+
 						</div>
-					</figure>
+						<figure>
+							<p class="h2">Пригоди <span>на природі</span></p>
+							<a href="#">
+								<img src="img/img-1.jpg" alt="">
+							</a>
+						</figure>
+					</div>
+					<div class="item item-2 " data-aos="fade-up" data-aos-delay="500">
+						<div class="text">
+
+							<p class="h2">Навчання <span>просто неба</span></p>
+							<p>Навчання - це зовсім не про ручку і зошит. Щоб пізнавати світ довкола, треба вийти із класу. Згодні? Тоді вам сюди.
+							</p>
+							<p>Лісові дні дуже впливають на динаміку в класі. Ефективне навчання починається тоді, коли група стає одним цілим.</p>
+							<div class="link-wrap">
+								<a href="#"><span class="icon"><img src="img/arrow.svg" alt=""></span>Докладніше</a>
+							</div>
+						</div>
+
+						<figure>
+							<p class="h2">Навчання <span>просто неба</span></p>
+							<a href="#">
+								<img src="img/img-2.jpg" alt="">
+							</a>
+
+						</figure>
+					</div>
 				</div>
+
 			</div>
 		</section>
 
 		<section class="number-block">
+			<div class="bg bg-mob">
+				<img src="img/mob-bg-12-1.svg" alt="" class="img-1">
+				<img src="img/mob-bg-12-2.svg" alt="" class="img-2">
+				<img src="img/mob-bg-12-3.png" alt="" class="img-3">
+			</div>
+			<div class="bg">
+				<img src="img/bg-3-1.svg" alt="" class="img-1">
+				<img src="img/bg-3-2.svg" alt="" class="img-2">
+				<img src="img/bg-3-3.png" alt="" class="img-3">
+			</div>
 			<div class="content-width">
 				<ul data-aos="fade-up" data-aos-delay="300">
 					<li class="item item-1">
@@ -298,21 +271,12 @@
 						<p>Учасників пригод</p>
 					</li>
 				</ul>
-				<p class="info">*Дані на 15 квітня 2023 року</p>
+				<p class="info">*Дані з 15 квітня 2023 року</p>
 			</div>
 		</section>
 
 		<section class="event">
-			<div class="bg bg-mob">
-				<img src="img/mob-bg-12-1.svg" alt="" class="img-1">
-				<img src="img/mob-bg-12-2.svg" alt="" class="img-2">
-				<img src="img/mob-bg-12-3.png" alt="" class="img-3">
-			</div>
-			<div class="bg">
-				<img src="img/bg-3-1.svg" alt="" class="img-1">
-				<img src="img/bg-3-2.svg" alt="" class="img-2">
-				<img src="img/bg-3-3.png" alt="" class="img-3">
-			</div>
+
 			<div class="content-width" data-aos="fade-up" data-aos-delay="300">
 				<p class="h2">Найближчі події</p>
 				<div class="tabs">
@@ -679,6 +643,8 @@
 							</div>
 						</div>
 					</div>
+					<div class="swiper-button-next next-3d"><img src="img/icon-19.svg" alt=""></div>
+					<div class="swiper-button-prev prev-3d"><img src="img/icon-19.svg" alt=""></div>
 					<div class="swiper-pagination pagination-3d"></div>
 				</div>
 			</div>
@@ -686,53 +652,13 @@
 
 		<section class="team" data-aos="fade-up" data-aos-delay="300">
 			<div class="content-width">
-				<p class="h2">Наша команда</p>
-				<div class="slider-wrap">
-					<div class="nav-wrap">
-						<div class="swiper-button-prev team-prev"><img src="img/icon-10.svg" alt=""></div>
-						<div class="swiper-button-next team-next"><img src="img/icon-10.svg" alt=""></div>
-					</div>
-					<div class="swiper team-slider">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide swiper-slide-1">
-								<figure>
-									<img src="img/img-5-1.jpg" alt="">
-								</figure>
-								<div class="text">
-									<p class="h4">Ірина Гищук</p>
-									<p>Альпінстка, журналістка, гірська туристка. Ширить навколо любов до пригод. Придумала Гойру і зібрала довкола себе команду інструкторів.</p>
-								</div>
-							</div>
-							<div class="swiper-slide swiper-slide-2">
-								<figure>
-									<img src="img/img-5-2.jpg" alt="">
-								</figure>
-								<div class="text">
-									<p class="h4">Саша Овчаренко</p>
-									<p>Альпініст, скелелаз, інструктор з гірськолижного спорту. Не уявляє життя без гір та дітей. У нього їх троє.</p>
-								</div>
-							</div>
-							<div class="swiper-slide swiper-slide-3">
-								<figure>
-									<img src="img/img-5-3.jpg" alt="">
-								</figure>
-								<div class="text">
-									<p class="h4">Маринка Булгакова</p>
-									<p>Тренерка зі спортивного орієнтування.  З її рюкзака з’являються найнесподіваніші речі, необхідні саме в цей момент. Часом буває суворою, але завжди справедливою.</p>
-								</div>
-							</div>
-							<div class="swiper-slide swiper-slide-4">
-								<figure>
-									<img src="img/img-5-3.jpg" alt="">
-								</figure>
-								<div class="text">
-									<p class="h4">Маринка Булгакова</p>
-									<p>Тренерка зі спортивного орієнтування.  З її рюкзака з’являються найнесподіваніші речі, необхідні саме в цей момент. Часом буває суворою, але завжди справедливою.</p>
-								</div>
-							</div>
-						</div>
-					</div>
+				<div class="text">
+					<p class="h2">Наша команда</p>
+					<p>Серед нас є альпіністи, гірські туристи, спелеологи, скелелази, біологи. Усі інструктори GoЙra! - це люди з активною життєвою позицією та непересічним аутдор-досвідом.</p>
 				</div>
+				<figure>
+					<img src="img/img-11.jpg" alt="">
+				</figure>
 				<div class="link-wrap">
 					<a href="#"><img src="img/icon-7.svg" alt="">Докладніше</a>
 				</div>
@@ -742,22 +668,37 @@
 		<section class="auto-slider-block" data-aos="fade-up" data-aos-delay="300">
 			<p class="h2">Разом ми створюємо <span>незабутній досвід</span></p>
 			<div class="content-width">
-				<div class="swiper auto-slider">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<img src="img/img-6.jpg" alt="">
-						</div>
-						<div class="swiper-slide">
-							<img src="img/img-6.jpg" alt="">
-						</div>
-						<div class="swiper-slide">
-							<img src="img/img-6.jpg" alt="">
+				<div class="slider-wrap">
+					<div class="swiper auto-slider">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<img src="img/img-6.jpg" alt="">
+								<div class="text-block">
+									<p class="h6">Назва пригоди,  2021</p>
+									<p><img src="img/icon-6.svg" alt="">Ґорґанський масив</p>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<img src="img/img-6.jpg" alt="">
+								<div class="text-block">
+									<p class="h6">Назва пригоди,  2021</p>
+									<p><img src="img/icon-6.svg" alt="">Ґорґанський масив</p>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<img src="img/img-6.jpg" alt="">
+								<div class="text-block">
+									<p class="h6">Назва пригоди,  2021</p>
+									<p><img src="img/icon-6.svg" alt="">Ґорґанський масив</p>
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="nav-wrap">
-					<div class="swiper-button-prev auto-prev"><img src="img/icon-10.svg" alt=""></div>
-					<div class="swiper-button-next auto-next"><img src="img/icon-10.svg" alt=""></div>
+					<div class="nav-wrap">
+						<div class="swiper-button-prev auto-prev"><img src="img/icon-10.svg" alt=""></div>
+						<div class="swiper-button-next auto-next"><img src="img/icon-10.svg" alt=""></div>
+					</div>
+					<div class="swiper-pagination auto-pagination"></div>
 				</div>
 			</div>
 		</section>
@@ -907,7 +848,7 @@
 			<div class="content-width">
 				<div class="content">
 					<div class="form-wrap" data-aos="fade-up" data-aos-delay="300">
-						<p class="h2">Залишаємося завжди у конткаті з вами</p>
+						<p class="h2">Залишаємося завжди у контакті з вами</p>
 						<form action="#" class="form-default form-default-big">
 							<div class="input-wrap">
 								<label for="name"></label>
@@ -949,6 +890,8 @@
 				</div>
 			</div>
 		</section>
+
+
 
 	</main>
 
@@ -1061,6 +1004,59 @@
 					<button type="submit" class="btn-default">Надіслати</button>
 				</div>
 			</form>
+			<div class="send-block">
+				<div class="wrap">
+					<p class="h4">Дякуємо</p>
+					<p>Ваш запит надіслано. Ми зв’яжемося з Вами найближчим часом.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="about fix-form">
+		<div class="btn-wrap">
+			<div class="form-wrap">
+				<div class="close-form">
+					<a href="#"><img src="img/icon-4.svg" alt=""></a>
+				</div>
+				<p class="h3">Залишити контакти</p>
+				<p>І ми зв’яжемося з Вами протягом дня!</p>
+				<form action="#" class="form-default">
+					<div class="input-wrap">
+						<label for="name-about"></label>
+						<input type="text" name="name-about" id="name-about" placeholder="Ім’я">
+					</div>
+					<div class="input-wrap input-wrap-tel-about">
+						<label for="tel-about"></label>
+						<input type="text" name="tel-about" id="tel-about" placeholder="">
+					</div>
+					<div class="input-wrap">
+						<label for="message-about"></label>
+						<textarea name="message-about" id="message-about" placeholder="Питання"></textarea>
+					</div>
+					<div class="input-submit">
+						<button type="submit" class="btn-default">Надіслати</button>
+					</div>
+					<div class="input-wrap-check">
+						<input type="checkbox" id="check-1" name="check-1" checked>
+						<label for="check-1">Натискаючи кнопку “Надіслати” я даю згоду на обробку моїх даних</label>
+					</div>
+
+					<div class="send-block">
+						<div class="wrap-send">
+							<p class="h3">Дякуємо!</p>
+							<p class="big">Ваш запит надіслано. Ми зв’яжемося з Вами найближчим часом.</p>
+						</div>
+					</div>
+
+				</form>
+				<div class="bottom">
+					<p>Також Ви можете подзвонити самостійно:</p>
+					<p><a href="tel:+380689795757">+38 (068) 979 57 57</a></p>
+				</div>
+			</div>
+			<a href="#"><img src="img/icon-3.svg" alt=""></a>
 		</div>
 	</div>
 
