--- a/policy.html
+++ b/policy.html
@@ -27,7 +27,7 @@
 			<div class="content-width">
 				<div class="logo-wrap">
 					<a href="index.html">
-						<img src="img/logo.svg" alt="">
+						<img src="img/logo-white.svg" alt="">
 					</a>
 				</div>
 				
@@ -44,7 +44,7 @@
 						<li><a href="#">Навчання просто неба</a></li>
 						<li><a href="#">Блог</a></li>
 						<li><a href="#">Про нас</a></li>
-						<li><a href="#">Громадьська діяльність</a></li>
+						<li><a href="#">Громадська діяльність</a></li>
 						<li class="sub-menu-wrap">
 							<a href="#">Інше</a>
 							<ul class="sub-menu">
@@ -118,7 +118,7 @@
 				</ul>
 
 				<div class="content">
-					<h1>Політика <br>приватності</h1>
+					<h1>Політика приватності</h1>
 					<p>Коли ви отримуєте доступ до до нашого вебсайту, ми автоматично збираємо з вашого пристрою файли cookie, IP-адресу, інформацію про вашу взаємодію з вебсайтом, наприклад, тип браузера, тип і модель пристрою, мову системи, обсяг пам’яті, версію ОС, час доступу та часовий пояс, тощо. Нам необхідні ці дані для надання наших послуг, а також аналізу, як користувачі використовують вебсайт.</p>
 
 					<p>Для покращення вебсайту та розміщення реклами ми використовуємо сторонні рішення. У результаті ми можемо обробляти дані за допомогою рішень, розроблених Ascend, Google, Wix. Тому деякі дані зберігаються та обробляються на серверах таких третіх сторін. Це дозволяє нам аналізувати різні взаємодії (як часто користувачі користуються вебсайтом, які сторінки переглядають наші користувачі).</p>
