--- a/about.html
+++ b/about.html
@@ -110,88 +110,203 @@
 
 	<main>
 
-		<section class="faq faq-block">
+		<section class="about-block">
+			<div class="bg">
+				<img src="img/bg-5-1.svg" alt="" class="img-1">
+				<img src="img/bg-5-2.svg" alt="" class="img-2">
+				<img src="img/bg-5-3.svg" alt="" class="img-3">
+			</div>
+			<div class="bg-mob">
+				<img src="img/bg-6-1.svg" alt="" class="img-1">
+				<img src="img/bg-6-2.svg" alt="" class="img-2">
+				<img src="img/bg-6-3.svg" alt="" class="img-3">
+			</div>
 			<div class="content-width">
 				<ul class="breadcrumb">
 					<li><a href="index.html"><img src="img/icon-15.svg" alt="">Головна  </a><span><img src="img/icon-14.svg" alt=""></span> </li>
-					<li>Батьківськи ЧаПи</li>
+					<li>Про нас</li>
 				</ul>
-				<h1><b>Батьківськи ЧаПи
-
-					<span class="tooltip">
-						<img src="img/icon-12.svg" alt="">
-						<span class="tooltip-info">Часті запитання</span>
-					</span>
-				</b>
-
-				</h1>
-
-				<div class="select-block">
-					<div class="item">
-						<label class="form-label" for="select-11"></label>
-						<select id="select-11">
-							<option value="0" selected disabled>Оберіть категорію</option>
-							<option value="1">Всі</option>
-							<option value="2">Категорія 1</option>
-							<option value="3">Категорія 2</option>
-							<option value="4">Категорія 3</option>
-							<option value="5">Категорія 4</option>
-						</select>
-					</div>
-				</div>
-
+				<h1>Про нас</h1>
+				<p class="top">Description or quote</p>
 				<div class="content">
-					<ul class="accordion">
-						<li class="accordion-item is-active" data-aos="fade-up" data-aos-delay="300">
-							<div class="accordion-thumb"><p class="title">А що, якщо моя дитина...</p> <div class="icon-wrap"><img src="img/plus.svg" alt=""></div></div>
-							<div class="accordion-panel">
-								<div class="wrap">
-									<p>Lorem ipsum dolor sit amet consectetur. Purus vel consequat risus commodo. Porttitor nunc viverra pellentesque maecenas mauris sed et rhoncus. Mauris ante nam aliquam id vulputate. Porttitor mauris vulputate purus aliquam.</p>
-								</div>
-							</div>
-						</li>
-						<li class="accordion-item" data-aos="fade-up" data-aos-delay="400">
-							<div class="accordion-thumb"><p class="title">А може бути таке, що...</p> <div class="icon-wrap"><img src="img/plus.svg" alt=""></div></div>
-							<div class="accordion-panel">
-								<div class="wrap">
-									<p>Lorem ipsum dolor sit amet consectetur. Purus vel consequat risus commodo. Porttitor nunc viverra pellentesque maecenas mauris sed et rhoncus. Mauris ante nam aliquam id vulputate. Porttitor mauris vulputate purus aliquam.</p>
-								</div>
-							</div>
-						</li>
-						<li class="accordion-item" data-aos="fade-up" data-aos-delay="500">
-							<div class="accordion-thumb"><p class="title">Що робити, якщо...</p> <div class="icon-wrap"><img src="img/plus.svg" alt=""></div></div>
-							<div class="accordion-panel">
-								<div class="wrap">
-									<p>Lorem ipsum dolor sit amet consectetur. Purus vel consequat risus commodo. Porttitor nunc viverra pellentesque maecenas mauris sed et rhoncus. Mauris ante nam aliquam id vulputate. Porttitor mauris vulputate purus aliquam.</p>
-								</div>
-							</div>
-						</li>
-						<li class="accordion-item" data-aos="fade-up" data-aos-delay="500">
-							<div class="accordion-thumb"><p class="title">Що робити, якщо...</p> <div class="icon-wrap"><img src="img/plus.svg" alt=""></div></div>
-							<div class="accordion-panel">
-								<div class="wrap">
-									<p>Lorem ipsum dolor sit amet consectetur. Purus vel consequat risus commodo. Porttitor nunc viverra pellentesque maecenas mauris sed et rhoncus. Mauris ante nam aliquam id vulputate. Porttitor mauris vulputate purus aliquam.</p>
-								</div>
-							</div>
-						</li>
-						<li class="accordion-item" data-aos="fade-up" data-aos-delay="500">
-							<div class="accordion-thumb"><p class="title">Що робити, якщо...</p> <div class="icon-wrap"><img src="img/plus.svg" alt=""></div></div>
-							<div class="accordion-panel">
-								<div class="wrap">
-									<p>Lorem ipsum dolor sit amet consectetur. Purus vel consequat risus commodo. Porttitor nunc viverra pellentesque maecenas mauris sed et rhoncus. Mauris ante nam aliquam id vulputate. Porttitor mauris vulputate purus aliquam.</p>
-								</div>
-							</div>
-						</li>
-					</ul>
-				</div>
+					<figure>
+						<img src="img/img-12.jpg" alt="">
+						<div class="after">
+							<img src="img/icon-21.svg" alt="">
+						</div>
+					</figure>
+					<p>Lorem ipsum dolor sit amet consectetur. Sit velit viverra facilisis feugiat. Vitae ac cursus neque mauris fames lorem nisi. Eu at morbi odio aenean justo morbi urna enim aliquet.</p>
 
-				<div class="bottom">
-					<a href="#" class=""><span><img src="img/icon-16.svg" alt=""></span> Показати ще</a>
+					<p>Nec id egestas quam phasellus eros eget dignissim donec. Bibendum ipsum faucibus integer vulputate justo phasellus suspendisse. Sagittis ipsum velit feugiat odio facilisis enim habitant pellentesque. Sem tincidunt consectetur sed velit elementum duis sollicitudin mauris feugiat.</p>
+
+					<p>Dictum at enim aliquam nunc. Id sed sociis faucibus et nibh quis scelerisque.Dictum at enim aliquam nunc. Id sed sociis faucibus et nibh quis scelerisque.</p>
+
+					<div class="wrap">
+						<p>Dictum at enim aliquam nunc. Id sed sociis faucibus et nibh quis scelerisque.</p>
+						<p>Lorem ipsum dolor sit amet consectetur. Sit velit viverra facilisis feugiat. Vitae ac cursus neque mauris fames lorem nisi. Eu at morbi odio aenean justo morbi urna enim aliquet.</p>
+
+						<p>Nec id egestas quam phasellus eros eget dignissim donec. Bibendum ipsum faucibus integer vulputate justo phasellus suspendisse. Sagittis ipsum velit feugiat odio facilisis enim habitant pellentesque. Sem tincidunt consectetur sed velit elementum duis sollicitudin mauris feugiat.</p>
+
+						<p>Lorem ipsum dolor sit amet consectetur. Sit velit viverra facilisis feugiat. Vitae ac cursus neque mauris fames lorem nisi. Eu at morbi odio aenean justo morbi urna enim aliquet.</p>
+
+						<p>Nec id egestas quam phasellus eros eget dignissim donec. Bibendum ipsum faucibus integer vulputate justo phasellus suspendisse. Sagittis ipsum velit feugiat odio facilisis enim habitant pellentesque. Sem tincidunt consectetur sed velit elementum duis sollicitudin mauris feugiat.</p>
+
+						<p>Dictum at enim aliquam nunc. Id sed sociis faucibus et nibh quis scelerisque.</p>
+					</div>
+
+					<a href="#" class="read-more">+ Читати далі</a>
 				</div>
 			</div>
 		</section>
 
-		<section class="faq-add">
+		<section class="team team-block" data-aos="fade-up" data-aos-delay="300">
+			<div class="content-width">
+				<div class="text">
+					<p class="h2">Наша команда</p>
+				</div>
+
+				<div class="slider-wrap">
+					<div class="swiper team-slider">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<img src="img/img-13.jpg" alt="">
+							</div>
+							<div class="swiper-slide">
+								<img src="img/img-13.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="nav-wrap">
+						<div class="swiper-button-next team-next"><img src="img/icon-19.svg" alt=""></div>
+						<div class="swiper-button-prev team-prev"><img src="img/icon-19.svg" alt=""></div>
+					</div>
+
+					<div class="swiper-pagination team-pagination"></div>
+				</div>
+
+			</div>
+		</section>
+
+		<section class="team-info">
+			<div class="content-width">
+				<p class="h2">Знайомимось ближче</p>
+				<div class="content">
+					<div class="item item-1">
+						<figure>
+							<img src="img/img-5-1.jpg" alt="">
+						</figure>
+						<div class="text">
+							<p class="h4">Ірина Гищук</p>
+							<p>Альпінстка, журналістка, гірська туристка. Ширить навколо любов до пригод. Придумала Гойру і зібрала довкола себе команду інструкторів.</p>
+						</div>
+					</div>
+					<div class="item item-2">
+						<figure>
+							<img src="img/img-5-2.jpg" alt="">
+						</figure>
+						<div class="text">
+							<p class="h4">Саша Овчаренко</p>
+							<p>Альпініст, скелелаз, інструктор з гірськолижного спорту. Не уявляє життя без гір та дітей. У нього їх троє.</p>
+						</div>
+					</div>
+					<div class="item item-3">
+						<figure>
+							<img src="img/img-5-3.jpg" alt="">
+						</figure>
+						<div class="text">
+							<p class="h4">Маринка Булгакова</p>
+							<p>Тренерка зі спортивного орієнтування.  З її рюкзака з’являються найнесподіваніші речі, необхідні саме в цей момент. Часом буває суворою, але завжди справедливою.</p>
+						</div>
+					</div>
+					<div class="item item-4">
+						<figure>
+							<img src="img/img-5-3.jpg" alt="">
+						</figure>
+						<div class="text">
+							<p class="h4">Маринка Булгакова</p>
+							<p>Тренерка зі спортивного орієнтування.  З її рюкзака з’являються найнесподіваніші речі, необхідні саме в цей момент. Часом буває суворою, але завжди справедливою.</p>
+						</div>
+					</div>
+					<div class="item item-5">
+						<figure>
+							<img src="img/img-5-1.jpg" alt="">
+						</figure>
+						<div class="text">
+							<p class="h4">Ірина Гищук</p>
+							<p>Альпінстка, журналістка, гірська туристка. Ширить навколо любов до пригод. Придумала Гойру і зібрала довкола себе команду інструкторів.</p>
+						</div>
+					</div>
+					<div class="item item-6">
+						<figure>
+							<img src="img/img-5-2.jpg" alt="">
+						</figure>
+						<div class="text">
+							<p class="h4">Саша Овчаренко</p>
+							<p>Альпініст, скелелаз, інструктор з гірськолижного спорту. Не уявляє життя без гір та дітей. У нього їх троє.</p>
+						</div>
+					</div>
+					<div class="item item-7">
+						<figure>
+							<img src="img/img-5-1.jpg" alt="">
+						</figure>
+						<div class="text">
+							<p class="h4">Ірина Гищук</p>
+							<p>Альпінстка, журналістка, гірська туристка. Ширить навколо любов до пригод. Придумала Гойру і зібрала довкола себе команду інструкторів.</p>
+						</div>
+					</div>
+					<div class="item item-8">
+						<figure>
+							<img src="img/img-5-2.jpg" alt="">
+						</figure>
+						<div class="text">
+							<p class="h4">Саша Овчаренко</p>
+							<p>Альпініст, скелелаз, інструктор з гірськолижного спорту. Не уявляє життя без гір та дітей. У нього їх троє.</p>
+						</div>
+					</div>
+					<div class="item item-9">
+						<figure>
+							<img src="img/img-5-3.jpg" alt="">
+						</figure>
+						<div class="text">
+							<p class="h4">Маринка Булгакова</p>
+							<p>Тренерка зі спортивного орієнтування.  З її рюкзака з’являються найнесподіваніші речі, необхідні саме в цей момент. Часом буває суворою, але завжди справедливою.</p>
+						</div>
+					</div>
+					<div class="item item-10">
+						<figure>
+							<img src="img/img-5-3.jpg" alt="">
+						</figure>
+						<div class="text">
+							<p class="h4">Маринка Булгакова</p>
+							<p>Тренерка зі спортивного орієнтування.  З її рюкзака з’являються найнесподіваніші речі, необхідні саме в цей момент. Часом буває суворою, але завжди справедливою.</p>
+						</div>
+					</div>
+					<div class="item item-11">
+						<figure>
+							<img src="img/img-5-1.jpg" alt="">
+						</figure>
+						<div class="text">
+							<p class="h4">Ірина Гищук</p>
+							<p>Альпінстка, журналістка, гірська туристка. Ширить навколо любов до пригод. Придумала Гойру і зібрала довкола себе команду інструкторів.</p>
+						</div>
+					</div>
+					<div class="item item-12">
+						<figure>
+							<img src="img/img-5-2.jpg" alt="">
+						</figure>
+						<div class="text">
+							<p class="h4">Саша Овчаренко</p>
+							<p>Альпініст, скелелаз, інструктор з гірськолижного спорту. Не уявляє життя без гір та дітей. У нього їх троє.</p>
+						</div>
+					</div>
+				</div>
+				<div class="btn">
+					<a href="#" class="more-team"><img src="img/icon-23.svg" alt=""> Показати ще</a>
+				</div>
+			</div>
+		</section>
+
+		<section class="faq-add team-add">
 			<div class="content-width">
 				<div class="content">
 					<div class="bg">
@@ -206,11 +321,11 @@
 					</div>
 					<div class="wrap">
 						<div class="text">
-							<p class="h3">Ще залишилися питання?</p>
-							<p>Ми дамо відповідь на ваше питання протягом 3 днів.</p>
+							<p class="h3">Бажаєш стати частиною команди?</p>
+							<p>Заповнюй форму </p>
 						</div>
 						<div class="btn-wrap">
-							<a href="#add-faq" class="fancybox btn-circle btn-circle-orange"><span>Запитати</span></a>
+							<a href="#add-faq" class="fancybox btn-circle btn-circle-orange"><span>Надіслати</span></a>
 						</div>
 					</div>
 
@@ -335,7 +450,7 @@
 	<div id="add-faq" class="add-testimonials popup-default popup-faq" style="display:none;">
 		<a href="#" class="close-popup" data-fancybox-close> <img src="img/close.svg" alt=""></a>
 		<div class="popup-main">
-			<p class="h3">Задайте нам питання</p>
+			<p class="h3">Стати командою</p>
 			<p>Заповніть форму нижче</p>
 			<form action="#" class="form-default form-default-big">
 				<div class="input-wrap">
