--- a/faq.html
+++ b/faq.html
@@ -342,14 +342,14 @@
 					<label for="name-popup-2"></label>
 					<input type="text" name="name-popup" id="name-popup-2" placeholder="Ім’я">
 				</div>
-				<div class="select-block">
+				<!--<div class="select-block">
 					<label class="form-label" for="select-1-2"></label>
 					<select id="select-1-2" name="select-1-2">
 						<option value="0" disabled selected>Оберіть категорію</option>
 						<option value="1">Категорія 1</option>
 						<option value="2">Категорія 2</option>
 					</select>
-				</div>
+				</div>-->
 				<div class="select-block">
 					<label class="form-label" for="select-2-1"></label>
 					<select id="select-2-1" name="select-2-1">
