--- a/blog.html
+++ b/blog.html
@@ -135,7 +135,7 @@
 						<div class="form-wrap">
 							<div class="input-wrap">
 								<label for="subscribe"></label>
-								<input type="text" name="subscribe" id="subscribe" placeholder="yourmail@gmail.com">
+								<span><input type="text" name="subscribe" id="subscribe" placeholder="yourmail@gmail.com"></span>
 								<button type="submit" class="btn-default">Підписатися</button>
 							</div>
 							<div class="send-block">
