--- a/_index.html
+++ b/_index.html
@@ -53,7 +53,7 @@
 
         <li><a href="adventures.html">Наші пригоди</a></li>
         <li><a href="social-activities.html">Громадська діяльність</a></li>
-        <li><a href="events.html">Наближчі події</a></li>
+        <li><a href="events.html">Актуальні події</a></li>
         <li><a href="event.html">Подія</a></li>
         <li><a href="form.html">Реєстраційна форма</a></li>
         <li><a href="teaching.html">Навчання просто неба</a></li>
